<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/title_ui_settings">
        <CheckBoxPreference
            android:key="pref_speed_enabled"
            android:summary="@string/summary_pref_speed_enabled"
            android:title="@string/title_pref_speed_enabled" />

        <CheckBoxPreference
            android:key="pref_confirm_remove"
            android:summary="@string/summary_pref_confirm_remove"
            android:title="@string/title_pref_confirm_remove" />

        <CheckBoxPreference
            android:key="pref_start_scan_immediate"
            android:summary="@string/summary_pref_start_scan_immediate"
            android:title="@string/title_pref_start_scan_immediate" />

        <CheckBoxPreference
            android:key="pref_double_column_display"
            android:summary="@string/summary_pref_double_column_display"
            android:title="@string/title_pref_double_column_display" />

        <CheckBoxPreference
            android:key="pref_group_all_display"
            android:summary="@string/summary_pref_group_all_display"
            android:title="@string/title_pref_group_all_display" />

        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/language_select"
            android:entryValues="@array/language_select_value"
            android:key="pref_language"
            android:summary="%s"
            android:title="@string/title_language" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/ui_mode_night"
            android:entryValues="@array/ui_mode_night_value"
            android:key="pref_ui_mode_night"
            android:summary="%s"
            android:title="@string/title_pref_ui_mode_night" />

        <Preference
            android:key="pref_open_app_icon"
            android:summary="@string/shrimp_app_icon_summary"
            android:title="@string/shrimp_app_icon_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_mode_settings">
        <ListPreference
            android:defaultValue="VPN"
            android:entries="@array/mode_entries"
            android:entryValues="@array/mode_value"
            android:key="pref_mode"
            android:summary="%s"
            android:title="@string/title_mode" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_subscription_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_send_hwid_enabled"
            android:summary="@string/summary_pref_send_hwid"
            android:title="@string/title_pref_send_hwid" />
    </PreferenceCategory>

    <Preference
        android:key="pref_open_developer_settings"
        android:fragment="com.v2ray.ang.ui.SettingsActivity$SettingsAdvancedFragment"
        android:title="@string/title_developer_settings" />

</PreferenceScreen>
